# strafunski

ATermLib/: .cvsignore  ANNOUNCEMENT  ChangeLog  INSTALL  Makefile  Prologue
ATermLib/scripts/: Makefile  makerules.check  makerules.clean  makerules.compile  makerules.opts
ATermLib/tests/: Makefile
ATermLib/tests/bench/: .cvsignore  ATermBench.hs  Makefile  TwoSorts.def.af.taf  TwoSorts.def.af.trm  sdf.2.3-I.def.af  sdf.2.3-I.def.af.taf  yacc.def.af  yacc.def.af.taf
ATermLib/tests/simple/: Makefile  Test.ds  Test.hs  Test.script
Sdf2Haskell/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README_for_cvs_users  VERSION.in  configure.in  reconf
Sdf2Haskell/examples/: Makefile.am
Sdf2Haskell/examples/java/: .cvsignore  DTDJavaMetrics.hs  Hello.java  Hoi.ccg.dot.correct  Hoi.java  Hoi.metrics.xml.correct  Hoi.pcg.dot.correct  Java.def  Java2CCG.hs  Java2PCG.hs  JavaChaseImports.hs  JavaIO.hs  JavaMetrics.hs  JavaPPTest.hs  JavaUtil.hs  Makefile.am  Verbatim.java  javametrics.dtd
Sdf2Haskell/examples/littlelambda/: .cvsignore  LittleLambda.def  Makefile.am
Sdf2Haskell/examples/twosorts/: .cvsignore  Makefile.am  TwoSorts.def  TwoSorts.hs.correct
Sdf2Haskell/examples/vs-cobol-ii/: .cvsignore  CobolLib.hs  CobolSyntax.def  Makefile.am  PerformGraph.hs  TestParser.hs
Sdf2Haskell/examples/vs-cobol-ii/testdata/: .cvsignore  Makefile.am  nest.cob  nest.pg.dot.correct  test.cob  test.pg.dot.correct  tiny.cob
Sdf2Haskell/generator/: .cvsignore  Cfg.hs  GPP.hs  HaskellLib.hs  ImplodePT.hs  Makefile.am  SGLR.hs  Sdf.def  Sdf.ds  Sdf2Cfg.hs  Sdf2Haskell.hs  Sdf2HaskellUtils.hs  Sdf2Pretty.hs  Sdf2Syntax.hs  SdfCoverage.hs  SdfEqInstances.hs  SdfLib.hs  SdfMetrics.hs  SdfOrdInstances.hs  SdfPP.hs  SyntaxATermConvertibleInstances.hs
Sdf2Haskell/scripts/: Makefile.am  makerules.misc
StrategyLib/examples/haskell/: .cvsignore
StrategyLib/examples/joos-padl02/: .cvsignore
StrategyLib/examples/joos-padl02/testsuite/: .cvsignore
StrategyLib/scripts/: makerules.opts
misc/ppdp09/: INSTALL  Makefile
misc/ppdp09/experiments/backtracking/: lib.pro
misc/ppdp09/experiments/basic/: app.pro  lib.pro
misc/ppdp09/experiments/bidirectional/: Makefile  app.pro
misc/ppdp09/experiments/nonground/: app.pro  lib.pro
misc/ppdp09/experiments/optimized/: generative.pro  lib.pro  types.pro
misc/ppdp09/shared/: Makefile  lists.pro  msft.pro
misc/syb42/: LICENSE
misc/syb42/src/StaticAnalysis/: Makefile
misc/syb42/src/StaticAnalysis/AnalysisLib/: Reachability.hs
misc/syb42/src/StaticAnalysis/AnalysisLib/SuccessFailure/: AbstractInterpretation.hs  Sf.hs  TypeSystem.hs
misc/syb42/src/StaticAnalysis/AnalysisLib/Termination/: CompoundMeasure.hs  DepthMeasure.hs  Rel.hs
misc/syb42/src/StaticAnalysis/Examples/Company/: Interpreter.hs  Reachability.hs  Signature.hs
misc/syb42/src/StaticAnalysis/SemanticsLib/: Domain.hs  Fix.hs
misc/syb42/src/StaticAnalysis/StrategyLib/: Semantics.hs  Signature.hs  Syntax.hs
misc/syb42/src/Strafunski/: Makefile
misc/syb42/src/Strafunski/Data/HList/: FakePrelude.hs  HArray.hs  HListPrelude.hs  HOccurs.hs  HTypeIndexed.hs  TIP.hs
misc/syb42/src/Strafunski/Examples/Company/: Baseline.hs  Cflow.hs  Default.hs  Fallibility.hs  HList.hs  Reachability.hs  Typecase.hs  Types.hs
misc/syb42/src/Strafunski/Examples/Tree/: Reachability.hs
misc/syb42/src/Strafunski/StrategyLib/: Baseline.hs  Cflow.hs  Default.hs  Fallibility.hs  HList.hs  Infallibility.hs  LessGenericity.hs  Reachability.hs  StrategyPrimitives.hs  Typecase.hs
ppdp09/: COPYRIGHT  README
ppdp09/experiments/backtracking/: app.pro
ppdp09/experiments/bidirectional/: lib.pro
ppdp09/experiments/optimized/: app.pro
ppdp09/shared/: holp.pro  meta.pro  shared.pro  syb.pro  vars.pro
